# awesome-py-project-template

./: .pre-commit-config.yaml  .safety-policy.yml  .safety-project.ini  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.sh  pre_prompt.py
templates/config-formatters/: black.toml  ruff.toml
templates/config-linters/: flake8.toml  pylint.toml  ruff.toml
templates/config-type-checkers/: mypy.toml  pyright.toml
{{ cookiecutter.__project_slug }}/: .gitignore  .pre-commit-config.yaml  LICENSE
{{ cookiecutter.project_name }}/: .pre-commit-config.yaml  pyproject.toml
